--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
             "@vitejs/plugin-react-swc": "^3.10.2",
             "sharp": "^0.34.5",
             "sharp-cli": "^5.2.0",
-            "vite": "6.3.5"
+            "vite": "^6.3.5"
       },
       "scripts": {
             "dev": "vite",
